--- a/pic.html
+++ b/pic.html
@@ -2,16 +2,15 @@
 <html lang="fr">
 
 <head>
+    <title>Document</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+    <link rel="stylesheet" href="pic.css"> </head>
 
 <body>
     <h1>First commit</h1>
-    <h2>
-    </h2>
+    <h2>On mets un titre</h2>
 
 </body>
 
