--- a/pic.html
+++ b/pic.html
@@ -12,6 +12,7 @@
     <h1>First commit</h1>
     <h2>On mets un titre</h2>
     <h3>Troisieme titre</h3>
+    <h4>OH un autre titre</h4>
 </body>
 
 </html>
