--- a/pic.html
+++ b/pic.html
@@ -13,6 +13,8 @@
     <h2>On mets un titre</h2>
     <h3>Troisieme titre</h3>
     <h4>OH un autre titre</h4>
+    <p>Hello</p>
+    <p>Hermann</p>
 </body>
 
 </html>
