--- a/pic.html
+++ b/pic.html
@@ -14,7 +14,7 @@
     <h3>Troisieme titre</h3>
     <h4>OH un autre titre</h4>
     <p>Hello</p>
-    <p>Hermann</p>
+    <p>Bogoss</p>
 </body>
 
 </html>
